# RunGoal

./: .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  admin-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tech-plan.md
apps/admin/: index.html  package.json
apps/admin/src/: App.tsx  main.tsx
apps/admin/src/components/: AdminLayout.tsx
apps/admin/src/lib/: api.ts
apps/admin/src/pages/: AchievementsPage.tsx  ChallengesPage.tsx  (+7 more)
apps/server/: .env.example  Cargo.toml  package.json
apps/server/migrations/: 0001_initial.sql
apps/server/prisma/: schema.prisma
apps/server/src/: app.ts  config.rs  db.rs  error.rs  main.rs
apps/server/src/lib/: prisma.ts
apps/server/src/middleware/: adminAuth.ts  auth.rs  auth.ts  errorHandler.ts
apps/server/src/models/: achievement.rs  admin.rs  challenge.rs  goal.rs  mod.rs  run.rs  user.rs
apps/server/src/routes/: achievement.ts  adminAchievements.ts  adminAuth.ts  adminChallenges.ts  adminDashboard.ts  adminGoals.ts  adminRuns.ts  adminUsers.ts  auth.ts  challenge.ts  goal.ts  mod.rs  run.ts  stats.ts  user.ts
apps/server/src/routes/admin/: achievements.rs  auth.rs  challenges.rs  dashboard.rs  goals.rs  mod.rs  runs.rs  users.rs
apps/server/src/routes/c/: achievement.rs  auth.rs  challenge.rs  goal.rs  mod.rs  ranking.rs  run.rs  stats.rs  user.rs
apps/server/src/services/: achievement.rs  mod.rs  stats.rs
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  main.tsx
deploy/: .env.production  .env.production.example  deploy.sh  ecosystem.config.cjs  nginx.conf
(+22 files in other folders)
